--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -31,7 +31,7 @@ jobs:
           fi
   unit_test:
     name: run unit test
-    runs_on: ubuntu-22.04
+    runs-on: ubuntu-22.04
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
