Adiciona final do estudo (#3)
* Adiciona o primeiro test

* Resolve norminette

* Adiciona segundo test

* Terceiro teste

segundo o exercicio ao implementar o terceiro teste algumas coisas
parecem não estarem certas. Logo quando algo assim acontece no TDD
nós devemos para com o teste atual, voltar para o estado do teste
anterior e repensar na nossa solução

* Resolve o terceiro teste

* feat: Fourth test

* feat: adicona fifth test

* fix: resolve norminette

* Atualiza o pull_request.yaml

* Atualizando minha branch develop com master

--- a/.github/workflows/pull_request.yaml
+++ b/.github/workflows/pull_request.yaml
@@ -29,3 +29,22 @@ jobs:
           if grep -q "Error" norminette_report.txt; then
             exit 1
           fi
+  unit_test:
+    name: run unit test
+    runs-on: ubuntu-22.04
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Configurando ambiente
+        run: |
+          sudo apt update
+          sudo apt install -y gcc make
+
+      - name: Run Unit test
+        run: |
+          make run_test | tee unit_report.txt
+          if grep -q "Error" unit_report.txt; then
+            exit 1
+          fi
+
